# emergency_speakup

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  start.launch
src/: emergency_speakup.cpp
