<?xml version="1.0"?>
<package>
  <name>emergency_speakup</name>
  <version>0.0.0</version>
  <description>The emergency_speakup package</description>
  <maintainer email="S.v.d.Dries@tue.nl">Sjoerd van den Dries</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
